      need to be under \code{inst/doc}, but they may not need to be
      installed.)

      \item \command{R CMD INSTALL} has a new option
      \option{--compact-docs} to compact any PDFs under the
      \file{inst/doc} directory.  Currently this uses \command{qpdf},
      which must be installed (see \sQuote{Writing R Extensions}).
    }
  }

  \subsection{DEPRECATED & DEFUNCT}{
    \itemize{
      \item \code{require(save = TRUE)} is defunct, and use of the
      \code{save} argument is deprecated.

      \item \command{R CMD check --no-latex} is defunct: use
      \option{--no-manual} instead.

      \item \command{R CMD Sd2Rd} is defunct.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} is deprecated
      and no longer has any effect.

      \item The previous options for \command{R CMD build --binary}
      (\option{--auto-zip}, \option{--use-zip-data} and
      \option{--no-docs}) are deprecated (or defunct):
      use the new option \option{--install-args} instead.

      \item When a character value is used for the \code{EXPR}
      argument in \code{switch()}, only a single unnamed alternative
      value is now allowed.

      \item The wrapper \code{utils::link.html.help()} is no longer
      available.

      \item Zip-ing data sets in packages (and hence \command{R CMD
	INSTALL} options \option{--use-zip-data} and \option{--auto-zip}, as
      well as the \samp{ZipData: yes} field in a \code{DESCRIPTION} file)
      is defunct.

      Installed packages with zip-ed data sets can still be used, but a
      warning that they should be re-installed will be given.

      \item The \sQuote{experimental} alternative specification of a
      name space via \code{.Export()} etc is now defunct.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{drop.terms} and the \code{[} method for class
      \code{"terms"} no longer add back an intercept.  (Reported by
      Niels Hansen.)
